some corrections on mobile and tab version

--- a/style.css
+++ b/style.css
@@ -904,13 +904,13 @@ footer p{
     }
 }
 
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
     .b-parallax {
         background-attachment: scroll;
     }
 }
 
-@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
+@media only screen and (min-width: 1024px) and (max-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
     .b-parallax {
         background-attachment: scroll;
     }
@@ -963,6 +963,9 @@ footer p{
     }
     .b-parallax {
         background-attachment: scroll;
+    }
+    footer ul{
+        margin-left: 20%;
     }
     .navbar .nav {
         padding-top: 0;
@@ -1053,6 +1056,10 @@ footer p{
     }
     .a-block {
         padding: 0 10px;
+    }
+    .col-sm-6{
+        width: 60%;
+        margin-left: 20%;
     }
     .btn-dwn {
         display: none;
